# serialisation-uqac

./: .gitignore  CMakeLists.txt  Player.cpp  Player.h  README.md  tests.cpp  testsPlayer.cpp
USerialisation/: CMakeLists.txt
USerialisation/include/: Compressor.h  Deserializer.h  FloatCompressor.h  IntCompressor.h  QuatCompressor.h  Serializer.h  VectCompressor.h  framework.h
USerialisation/src/: Deserializer.cpp  FloatCompressor.cpp  IntCompressor.cpp  QuatCompressor.cpp  Serializer.cpp  VectCompressor.cpp
include/: FloatCompressor.h  QuatCompressor.h  Serializer.h  VectCompressor.h
src/: Deserializer.cpp  FloatCompressor.cpp  QuatCompressor.cpp  Serializer.cpp
